fixed spacing bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -966,36 +966,36 @@ section {
 }
 /* Event Section
 --------------------------------*/
-#event {
-  padding: 80px 0 120px 0;
+.event {
+  padding: 80px 0 50px 0;
 }
-#event .row {
+.event .row {
   margin-bottom: 5em;
   margin-top: 4em;
 }
 
-#event .row .card-img-top {
+.event .row .card-img-top {
   height: 220px;
 }
-#event .row .card {
+.event .row .card {
   cursor: pointer;
   box-shadow: 0;
   transition: box-shadow 0.5s;
 }
-#event .row .card:hover {
+.event .row .card:hover {
   box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px,
     rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
 }
-#event .row .card-body {
+.event .row .card-body {
   padding-bottom: 20px;
 }
-#event .row .card-body .card-text {
+.event .row .card-body .card-text {
   font-style: italic;
   font-size: 14px;
   margin: 0;
   padding: 0;
 }
-#event .more-event:hover {
+.event .more-event:hover {
   text-decoration: underline;
 }
 
